fix: change deprecated newInstance() to getDeclaredConstructor().newInstance()